--- a/exercicios/ex026/mq005/css/style.css
+++ b/exercicios/ex026/mq005/css/style.css
@@ -20,8 +20,22 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+i#burguer {
+    background-color: rgb(63, 62, 62);
     display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+i#burguer:hover {
+    background-color: #fff;
+    color: black;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
